--- a/products-service/package.json
+++ b/products-service/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
