--- a/products-service/tsconfig.paths.json
+++ b/products-service/tsconfig.paths.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@api/*": ["src/api/*"],
       "@functions/*": ["src/functions/*"],
-      "@libs/*": ["src/libs/*"]
+      "@libs/*": ["src/libs/*"],
+      "@ptypes/*": ["src/types/*"]
     }
   }
 }
