--- a/products-service/package.json
+++ b/products-service/package.json
@@ -4,7 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:watch": "jest --watch",
+    "test": "jest"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -15,14 +16,19 @@
     "axios": "^0.27.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^28.1.6",
     "@types/node": "^14.14.25",
+    "babel-jest": "^28.1.3",
     "esbuild": "^0.14.11",
+    "jest": "^28.1.3",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "serverless-plugin-swagger-ui": "^1.1.1",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
