--- a/products-service/package.json
+++ b/products-service/package.json
@@ -26,8 +26,8 @@
     "jest": "^28.1.3",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
+    "serverless-auto-swagger": "^2.8.2",
     "serverless-esbuild": "^1.23.3",
-    "serverless-plugin-swagger-ui": "^1.1.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
