Add db-migrate package

--- a/products-service/.gitignore
+++ b/products-service/.gitignore
@@ -8,4 +8,8 @@ jspm_packages
 # esbuild directories
 .esbuild
 
+# swagger plugin generated directory
 swagger
+
+db-migrations/configs/*
+!db-migrations/configs/default.json
