--- a/products-service/package.json
+++ b/products-service/package.json
@@ -22,6 +22,8 @@
     "@types/jest": "^28.1.6",
     "@types/node": "^14.14.25",
     "babel-jest": "^28.1.3",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "esbuild": "^0.14.11",
     "jest": "^28.1.3",
     "json-schema-to-ts": "^1.5.0",
