Get products from the database

--- a/products-service/tsconfig.paths.json
+++ b/products-service/tsconfig.paths.json
@@ -2,10 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@api/*": ["src/api/*"],
+      "@src/*": ["src/*"],
       "@functions/*": ["src/functions/*"],
-      "@libs/*": ["src/libs/*"],
-      "@ptypes/*": ["src/types/*"]
+      "@libs/*": ["src/libs/*"]
     }
   }
 }
