--- a/products-service/package.json
+++ b/products-service/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
-    "axios": "^0.27.2"
+    "@types/pg": "^8.6.5",
+    "axios": "^0.27.2",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
