--- a/products-service/package.json
+++ b/products-service/package.json
@@ -5,7 +5,14 @@
   "main": "serverless.ts",
   "scripts": {
     "test:watch": "jest --watch",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
+    "generate-swagger": "serverless generate-swagger",
+    "lint": "eslint --ext .js,.ts ./src",
+    "lint:fix": "eslint --ext .js,.ts ./src --fix",
+    "check-types": "tsc --noEmit",
+    "check": "npm run lint && npm run test && npm run check-types"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -23,10 +30,16 @@
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^28.1.6",
     "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "babel-jest": "^28.1.3",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "esbuild": "^0.14.11",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^28.1.3",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
