--- a/products-service/tsconfig.json
+++ b/products-service/tsconfig.json
@@ -9,7 +9,8 @@
     "sourceMap": true,
     "target": "ES2020",
     "outDir": "lib",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
