--- a/import-service/package.json
+++ b/import-service/package.json
@@ -17,8 +17,11 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.137.0",
+    "@aws-sdk/s3-request-presigner": "^3.137.0",
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "csv-parser": "^3.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
