--- a/products-service/package.json
+++ b/products-service/package.json
@@ -18,6 +18,7 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.142.0",
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
     "@types/pg": "^8.6.5",
