--- a/products-service/tsconfig.json
+++ b/products-service/tsconfig.json
@@ -10,7 +10,8 @@
     "target": "ES2020",
     "outDir": "lib",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": true
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
